crates/rootbeer-eval/tests/snapshots/go@1.27.1-x86_64-linux.snap
---
source: crates/rootbeer-eval/tests/eval.rs
---

# 7xt34lopezfofwfbqvnejlo5b37ff4tl
kind: fetch
sha256: 4444444444444444444444444444444444444444444444444444444444444444
urls:
  - https://example.com/go1.27.1.linux-amd64.tar.gz

# zny7lluton2szdexdko53y5iqjnd4xup
kind: build
name: go
version: 1.27.1
platform: x86_64-linux
sandbox: linux-v1
inputs:
  source: 7xt34lopezfofwfbqvnejlo5b37ff4tl
outputs:
  - out
script: |
  set -eu
  mkdir "${TMPDIR}/unpack"
  tar -xzf "${source}" -C "${TMPDIR}/unpack"
  mv "${TMPDIR}/unpack/go" "${out}"
