crates/rootbeer-eval/tests/snapshots/libz@1.3.2-aarch64-macos.snap
---
source: crates/rootbeer-eval/tests/eval.rs
---

# 46ju3wvob5d7a26rjdk7mbpceliybsev
kind: fetch
sha256: 6666666666666666666666666666666666666666666666666666666666666666
urls:
  - https://example.com/libz-1.3.2.tar.xz

# htp4z4thjxnlw64nt6rj5xlvu4osy7of
dependencies:
  - e3rtcvq5o2vghgq5chw5txhptocnekd2 build tool
  - e3rtcvq5o2vghgq5chw5txhptocnekd2 linked tool
env:
  RB_SYSTEM: builder-sha256:0000
inputs:
  source: 46ju3wvob5d7a26rjdk7mbpceliybsev
kind: build
name: libz
outputs:
  - out
platform: aarch64-macos
sandbox: darwin-v1
script: |
  set -eu
  tar -xJf "${source}" -C .
  cd libz-1.3.2
  patch --batch -p1 <<'RB_PATCH'
  --- a/Makefile
  +++ b/Makefile
  @@ -1 +1 @@
  -CFLAGS = -O3
  +CFLAGS = -O2
  RB_PATCH
  ./configure --prefix=/ "--with-tool=${deps}"
  make "-j${jobs}" VERSION=1.3
  make "DESTDIR=${out}" install
  sh -c "echo \"\$1\" > ${out}/note" note "it's \`done\`"
version: 1.3.2

# hhabwqau3vnj6otgrxiucmfc4chs2xsn
env:
  RB_SYSTEM: builder-sha256:0000
kind: check
name: libz
platform: aarch64-macos
sandbox: darwin-v1
script: |
  set -eu
  find . -exec true "{}" ";"
  test -e "${target}/lib/libz.a"
  test -e "${target}/lib/libz.dylib"
target: htp4z4thjxnlw64nt6rj5xlvu4osy7of
