crates/rootbeer-eval/tests/snapshots/libz@1.3.2-x86_64-linux.snap
---
source: crates/rootbeer-eval/tests/eval.rs
---

# 46ju3wvob5d7a26rjdk7mbpceliybsev
kind: fetch
sha256: 6666666666666666666666666666666666666666666666666666666666666666
urls:
  - https://example.com/libz-1.3.2.tar.xz

# 6i67rywx65sdqz2xklja5ghagt2unkmq
kind: build
name: libz
version: 1.3.2
platform: x86_64-linux
sandbox: linux-v1
inputs:
  source: 46ju3wvob5d7a26rjdk7mbpceliybsev
dependencies:
  - tool (build) ydbvnsmjxthg5pnlcpdou7oy2xyqh6p3
  - tool (linked) ydbvnsmjxthg5pnlcpdou7oy2xyqh6p3
env:
  RB_SYSTEM: builder-sha256:0000
outputs:
  - out
script: |
  set -eu
  tar -xJf "${source}" -C .
  cd libz-1.3.2
  patch --batch -p1 <<'RB_PATCH'
  --- a/Makefile
  +++ b/Makefile
  @@ -1 +1 @@
  -CFLAGS = -O3
  +CFLAGS = -O2
  RB_PATCH
  export LDFLAGS="-Wl,-S -Wl,-rpath,${out}/lib"
  ./configure "--prefix=${out}" --with-tool=/opt/rb/store/ydbvnsmjxthg5pnlcpdou7oy2xyqh6p3-tool-2.0.0
  make "-j${jobs}" VERSION=1.3
  make install
  sh -c "echo \"\$1\" > ${out}/note" note "it's \`done\`"

# 5jast4f24lwprm3xnporql7ab5xsj3o2
kind: check
name: libz
target: 6i67rywx65sdqz2xklja5ghagt2unkmq
platform: x86_64-linux
sandbox: linux-v1
env:
  RB_SYSTEM: builder-sha256:0000
script: |
  set -eu
  find . -exec true "{}" ";"
  test -e "${target}/lib/libz.a"
  test -e "${target}/lib/libz.so"
