crates/rootbeer-eval/tests/snapshots/tool@2.0.0-aarch64-macos.snap
---
source: crates/rootbeer-eval/tests/eval.rs
---

# l5dyidyao2hrmjzeagefjebwdmc4dhxp
kind: fetch
sha256: 7777777777777777777777777777777777777777777777777777777777777777
urls:
  - https://example.com/tool-2.0.0-darwin-arm64

# e3rtcvq5o2vghgq5chw5txhptocnekd2
kind: build
name: tool
version: 2.0.0
platform: aarch64-macos
sandbox: darwin-v1
inputs:
  source: l5dyidyao2hrmjzeagefjebwdmc4dhxp
outputs:
  - out
script: |
  set -eu
  mkdir -p "${out}/bin"
  cp "${source}" "${out}/bin/tool"
  chmod 755 "${out}/bin/tool"
